💄 Fix not-wrapping partner logos

--- a/assets/styles/foerder.scss
+++ b/assets/styles/foerder.scss
@@ -1,6 +1,5 @@
 .foerder {
   &__avatar {
-    border-radius: 50%;
     height: 15rem;
     display: block;
     margin: 0 auto 0;
